kustom-webapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: flask
