kustom-webapp/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mywebapp2
  labels:
    app: mywebapp2
spec:
  host: 
  path: /
  to:
    kind: Service
    name: myhelmapp
    weight: 100
  port:
    targetPort: flask
  tls:
    termination: edge
  wildcardPolicy: None
